tests/outputs/Filter_038.out
Parse tree from tests/cases/Filter_038.inp:
Filter(9999)
  Expression(9999)
    ExpressionClause(9999)
      ExpressionPhrase(9999)
        Comparison(9999)
          PropertyFirstComparison(9999)
            Property(9999)
              Identifier(9999)
                LowercaseLetter(9999)
                  TOKEN_86(9999): "e", line: 1, col: 1
                LowercaseLetter(9999)
                  TOKEN_93(9999): "l", line: 1, col: 2
                LowercaseLetter(9999)
                  TOKEN_86(9999): "e", line: 1, col: 3
                LowercaseLetter(9999)
                  TOKEN_94(9999): "m", line: 1, col: 4
                LowercaseLetter(9999)
                  TOKEN_86(9999): "e", line: 1, col: 5
                LowercaseLetter(9999)
                  TOKEN_95(9999): "n", line: 1, col: 6
                LowercaseLetter(9999)
                  TOKEN_101(9999): "t", line: 1, col: 7
                LowercaseLetter(9999)
                  TOKEN_100(9999): "s", line: 1, col: 8
                Spaces(9999)
                  Space(9999)
                    TOKEN_1(9999): " ", line: 1, col: 9
            SetOpRhs(9999)
              HAS(9999)
                TOKEN_47(9999): "HAS", line: 1, col: 10
                Spaces(9999)
                  Space(9999)
                    TOKEN_1(9999): " ", line: 1, col: 13
              Value(9999)
                OrderedValue(9999)
                  OrderedConstant(9999)
                    String(9999)
                      TOKEN_3(9999): """, line: 1, col: 14
                      EscapedChar(9999)
                        UnescapedChar(9999)
                          Letter(9999)
                            UppercaseLetter(9999)
                              TOKEN_46(9999): "H", line: 1, col: 15
                      TOKEN_3(9999): """, line: 1, col: 16
Error: in tests/cases/Filter_038.inp: line 1:
    unexpected token ":", expected <EOF>

elements HAS "H":6
                ^
